Clean up hosted diagnostics split readability